--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="box">
                   
                 </div>
-                
+                <button id="nextButton">Next</button>
 
  
     </div>
