--- a/quiz.html
+++ b/quiz.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-
+<script type="text/javascript" src="quiz.js"></script>
 <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Arvo' rel='stylesheet' type='text/css'>
       
